# demoneye

./: .gitmodules  CMakeLists.txt  README.md  index.php
css/: default.css  index.css
downloads/: index.php
downloads/css/: index.css
downloads/js/: index.js
guides/: index.php
htmlsnippets/: headerbar.php
htmlsnippets/css/: headerbar.css
htmlsnippets/js/: headerbar.js
intern/: .sample.php  pagemeta.html
legal/linux.svg.d/: README.txt
resources/default/shaders/: fragment2d.glsh.c  vertex2d.glsh.c
sdk/: build.sh
sdk/include/: demoneye.h
sdk/include/demoneye/: array.hpp  env.hpp  gl.hpp  io.hpp  iter.hpp  linked_list.hpp  logger.hpp  math.hpp  mathio.hpp  memory.hpp  periphio.hpp  resmgr.hpp  rtdl.hpp  serialize.hpp  setup.hpp  string.hpp  table.hpp  threading.hpp
sdk/include/demoneye/resmgr/: reslocs.hpp  restypes.hpp
sdk/include/demoneye/serialize/: array.hpp  general.hpp  llist.hpp  table.hpp
sdk/include/demoneye/setup/: config.hpp  errno.hpp  includes.hpp  platform.hpp  traits.hpp  types.hpp
sdk/lib/: env.EngineContext.cxx  gl.GLAD.cxx  gl.GLFWContext.cxx  gl.GLShaderContext.cxx  gl.GLShaderModule.cxx  gl.GLWindow.cxx  gl.cxx  resmgr.cxx  setup.types.iTerminatable.cxx  string.cxx  string.strcmp_t.cxx  string.string.cxx  threading.thread.cxx
support/: index.php
test/: build.sh  test  test.cpp
